--- a/cssmenu.css
+++ b/cssmenu.css
@@ -6,12 +6,14 @@
 
 
 body{
+    
  background-image: url(https://zupimages.net/up/21/40/orzr.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  font-family: 'Bitter', serif;
 font-family: 'Cabin', sans-serif;
+
 
 
 
@@ -66,20 +68,12 @@ li{
 }
 
 #navbar{
-    
-    
+ 
     padding-top: 5vh;
 
     
     padding-bottom: 2vh; 
-  /*   background-image:  url(https://zupimages.net/up/21/25/uzpx.jpg)  ;
-    
-    
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    
-    border: 1px solid; */
+ 
 }
 
 #logo{
@@ -120,48 +114,21 @@ li{
 }
 
 
-
-
-
-
-
-
-
-
-
-.owl-carousel .owl-nav button.owl-prev,
-  .owl-carousel .owl-nav button.owl-next,
-  .owl-carousel button.owl-dot {
-      
-  
-    font-size: 80px;
+#prix{
     
-    margin-top: 0px;
-    padding-top: 0 !important;
-     }
-
-
-.owl-theme .owl-nav {
-    
-    text-align: center;
-    font-size: 50px;
-    color: rgb(255, 0, 0);
    
-    border-radius: 5px;
-    cursor: default;
-     }
+    font-size: 20px;
+}
 
 
-     .owl-theme .owl-dots .owl-dot span {
-        width: 20px;
-        height: 15px;
-        margin: 5px 7px;
-        background: #ff0000;
-        display: block;
-        -webkit-backface-visibility: visible;
-        transition: opacity 200ms ease;
-        border-radius: 30px; }
+img{
 
+    height: 50px;
+    width: 50px;
+}
 
-
-        
+img:hover{
+    
+    width: 200px;
+    height: 200px;
+}
