--- a/contact.css
+++ b/contact.css
@@ -113,9 +113,10 @@ li{
    
 }
 
-#foot{
-    margin-bottom: 1px;
-    padding-bottom: 1px;
+#footer{
+    background: -webkit-linear-gradient(90deg, rgb(106, 0, 0), rgb(230, 241, 252));
+    background: linear-gradient(90deg, rgb(106, 0, 0), rgb(230, 241, 252));
+    
 }
 
 #jumbo{
