--- a/pagination2.css
+++ b/pagination2.css
@@ -147,6 +147,13 @@ li:hover{
 }
 
 
+#footer{
+    background: -webkit-linear-gradient(90deg, rgb(106, 0, 0), rgb(230, 241, 252));
+    background: linear-gradient(90deg, rgb(106, 0, 0), rgb(230, 241, 252));
+    
+}
+
+
 
 
 
