--- a/restaurant.css
+++ b/restaurant.css
@@ -23,6 +23,7 @@ font-family: 'Cabin', sans-serif;
 }
 
 #titre{
+    background-color: rgba(128, 128, 128, 0.384);
     color: white;
     text-shadow: 10px 5px 5px red;
     font-weight: bold;
@@ -30,6 +31,15 @@ font-family: 'Cabin', sans-serif;
     font-family: 'Cabin', sans-serif;
 }
 
+
+#second{
+    padding-bottom: 4.3vh;
+    background-color: rgba(241, 236, 236, 0.918);
+}
+#troisieme{
+    padding-bottom: 0.8vh;
+    background-color: rgba(241, 236, 236, 0.918);
+}
 
 
 
@@ -162,9 +172,11 @@ li:hover{
 
 
 #footer{
-    
+ display: flex;  
+ padding-top: 1vh;
+padding-bottom: 0vh;
+justify-content: space-between; 
 
-    
 background: -webkit-radial-gradient(rgb(255, 183, 183), rgb(70, 0, 0));
 background: radial-gradient(rgb(255, 183, 183), rgb(70, 0, 0));
 
