--- a/contact.css
+++ b/contact.css
@@ -20,12 +20,18 @@ font-family: 'Cabin', sans-serif;
 }
 
 #titre{
-    color: white;
-    text-shadow: 10px 5px 5px red;
-    font-weight: bold;
-    font-family: 'Bitter', serif;
-    font-family: 'Cabin', sans-serif;
+    
+  
+
+    background-color: rgba(8, 8, 8, 0.822); 
+   color: white;
+   text-shadow: 1px 2px 2px red;
+   font-weight: bold;
+   font-family: 'Bitter', serif;
+   font-family: 'Cabin', sans-serif;
+   padding-bottom: 3vh;
 }
+
 
 
 
