--- a/pagination2.css
+++ b/pagination2.css
@@ -42,7 +42,7 @@ font-family: 'Cabin', sans-serif;
 #soustitre{
     
     color: white;
-    text-shadow: 5px 5px 5px red;
+    text-shadow: 1px 1px 1px red;
     font-weight: bold;
     
 
@@ -161,6 +161,18 @@ li:hover{
 }
 
 
+
+li{
+    background-color: rgb(255, 0, 0);
+    border-radius: 5px;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    margin-top: 1vh;
+   
+    text-shadow: 0px 0px 0px rgb(255, 255, 255);
+    
+    
+}
 
 
 
